# circbuf

./: CMakeLists.txt  README.md  circbuf.cpp
include/circbuf/: circbuf.hpp  safe_lock.hpp
src/: circbuf.cpp  main.cpp
